[package]
edition = "2021"
name = "stitch_bindings"
version = "0.1.26"

[lib]
crate-type = ["cdylib"]
name = "stitch_core"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "3.1.0"}
# stitch_core = {path = "../stitch"}
stitch_core = {git = "https://github.com/andreyz4k/stitch", commit = "13da96c454047ed5b505176c9af57a076a30ad09"}
